2013-12-31  Massimo Nocentini  <massimo.nocentini@gmail.com>

	* little-schemer-tests.sml (LittleSchemerTests): add the missing
	tests for the last five steps of Y derivation and add nine tests
	for the ``length'' function, using the three different techniques.

	* little-schemer.sml: removed unnecessary parens from patterns and
	introduce a unique parameter for ``fn arg => ...'' expressions in order
	to substitute it with ``case a of ...'' to have a better indentation.
	(LittleSchemer): add reference to
	http://www.cs.cornell.edu/courses/cs3110/2008fa/recitations/rec26.html
	to record the great help that page provide on the use of G for
	self application.

2013-12-29  Massimo Nocentini  <massimo.nocentini@gmail.com>

	* little-schemer.sml (LittleSchemer.length_with_collector): done
	some.
	(LittleSchemer.length_with_accumulator): imple.
	(LittleSchemer.length_with_collector.L): implementation of inner
	function L using the collector paradigm.
	(LittleSchemer.length_with_collector.L): hel
