@@ -1,5 +1,8 @@
-input-from-file:
-	sml -Cprint.depth=1000 -Cparser.quotations=true -Ctdp.instrument=true   sources.cm < test-input.sml
+tests:
+	sml -Cprint.depth=1000 -Cparser.quotations=true sources.cm < test-input.sml
+
+scratch:
+	sml -Cprint.depth=1000 -Cparser.quotations=true -Ctdp.instrument=true   sources.cm < scratch-input.sml
 
 interactive:
 	sml -Cprint.depth=1000 -Cparser.quotations=true sources.cm 
